<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elevation_mapping_demos</name>
  <version>0.7.4</version>
  <description>Demonstrations for the elevation mapping framework.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/elevation_mapping</url>
  <url type="bugtracker">http://github.com/anybotics/elevation_mapping/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>elevation_mapping</depend>
  <!-- <depend>grid_map_rviz_plugin</depend> -->
  <depend>rviz2</depend>

  <!-- <exec_depend>nodelet</exec_depend> -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <!-- <exec_depend>pcl_ros</exec_depend> -->
  <!-- <exec_depend>point_cloud_io</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <test_depend>roslaunch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
